# haskell-jenkins

./: .gitignore  LICENSE  README.md  haskell-jenkins.cabal
app/: Main.hs
src/: JenkinsConfig.hs  Main.hs  jenkins.hs
