name:                haskell-jenkins
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/githubuser/haskell-jenkins#readme
license:             BSD3
license-file:        LICENSE
author:              Chris Albert
maintainer:          chris@lbert.io
copyright:           2017 Chris Albert
category:            cli
build-type:          Simple
cabal-version:       >=1.10
extra-source-files:  README.md

executable haskell-jenkins
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5
                     , haskell-jenkins
                     , mtl

library
  hs-source-dirs:      src
  default-language:    Haskell2010
  exposed-modules:     Jenkins
                     , JenkinsConfig
  build-depends:       base >= 4.7 && < 5
                     , wreq
                     , lens
                     , aeson
                     , lens-aeson
                     , bytestring
                     , text
                     , ConfigFile
                     , mtl